sample/asm/invalid_operand_types/isub.asm
.function: main
    istore 1 1
    strstore 2 "Hello World!"
    isub 3 1 2

    izero 0
    return
.end
